<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/manage_list_add"
        android:icon="@drawable/ic_add_white_24dp"
        android:title="Add"
        app:showAsAction="always" />
    <item
        android:id="@+id/manage_list_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="Delete"
        app:showAsAction="always" />
    <item
        android:id="@+id/manage_list_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="Search"
        android:visible="true"
        app:showAsAction="always" />
</menu>