<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/manage_deletion_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="Delete"
        app:showAsAction="always" />
</menu>